# Airline-Revenue-Management-IROPS-Seat-Allocation-Optimizer

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy-pages.yml  tests.yml
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEPLOYMENT.md  index.html
examples/: basic_usage.py  custom_config.py
reroute/: __init__.py
reroute/api/: __init__.py  server.py
reroute/cli/: __init__.py  analyze.py  export_demo.py  main.py
reroute/core/: __init__.py  config.py  logging.py  types.py
reroute/model/: __init__.py  risk.py
reroute/sim/: __init__.py  generator.py  harness.py
reroute/solver/: __init__.py  baseline.py  costs.py  lp.py
tests/: test_api.py  test_config.py  test_generator.py  test_optimizer.py  test_risk_model.py
web/: app.js  index.html  scenarios_for_demo.json
